feat(ai-interview-service): vector storage configuration - add chromadb configuration - add embedding model configuration - create QuestionLoader to load questions to chromadb if needed